# unique-service-selector-policy

./: Cargo.toml  Makefile  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  metadata.yml
.github/workflows/: release.yml
src/: lib.rs  settings.rs
test_data/: replay-session-service-with-app-selector.yml  replay-session-with-label-selector.yml
