[package]
name = "unique-service-selector-policy"
version = "1.0.5"
authors = ["Kubewarden developers <cncf-kubewarden-maintainers@lists.cncf.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
k8s-openapi = { version = "0.26.0", default-features = false, features = [
  "v1_32",
] }
kubewarden-policy-sdk = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rstest = "0.26.0"
